Fix message card align

--- a/idea/new-frontend/src/entities/message/ui/horizontalMessageCard/HorizontalMessageCard.module.scss
+++ b/idea/new-frontend/src/entities/message/ui/horizontalMessageCard/HorizontalMessageCard.module.scss
@@ -3,10 +3,6 @@
 @use 'shared/assets/styles/_variables.scss' as *;
 
 .horizontalMessageCard {
-  display: grid;
-  grid-template-rows: minmax(max-content, 1fr);
-  grid-template-columns: minmax(max-content, 1fr) minmax(max-content, 0.3fr);
-  gap: 30px;
   align-items: center;
   position: relative;
   padding: toRem(20) toRem(24);
@@ -15,7 +11,14 @@
   border-radius: 16px;
 
   &.moreInfo {
-    grid-template-columns: minmax(max-content, 0.3fr) minmax(max-content, 0.4fr) minmax(max-content, 0.3fr);
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  &:not(.moreInfo) {
+    display: flex;
+    justify-content: space-between;
   }
 
   .fromBlock {
@@ -24,7 +27,7 @@
     display: flex;
     font-weight: 500;
     align-items: center;
-    
+
     .text {
       color: $gray600;
       font-size: $fontSizeTiny;
