--- a/idea/new-frontend/src/shared/ui/bulbBlock/BulbBlock.module.scss
+++ b/idea/new-frontend/src/shared/ui/bulbBlock/BulbBlock.module.scss
@@ -8,6 +8,7 @@
   &::before {
     content: '';
 
+    flex-shrink: 0;
     width: 8px;
     height: 8px;
     margin: $marginTiny;
@@ -19,12 +20,12 @@
     background-color: $errorColor;
     box-shadow: 0px 0px 10px $errorColor;
   }
-  
+
   &.success::before {
     background-color: $successColor;
     box-shadow: 0px 0px 10px $successColor;
   }
-  
+
   &.loading::before {
     background-color: $blue;
     box-shadow: 0px 0px 10px $blue;
@@ -34,7 +35,7 @@
 .status {
   line-height: 1.3;
   margin-left: $marginSmall;
-  
+
   &.small {
     font-size: $fontSizeTiny;
   }
@@ -50,6 +51,6 @@
   }
 
   &.light {
-    color: $gray600
+    color: $gray600;
   }
 }
